# ball-follower-robot

./: .gitignore  README.md  SETUP_GUIDE.md
arduino/: ball_follower_arduino.ino
arduino/1/ball_follower_arduino/: ball_follower_arduino.ino
arduino/3/ball_follower_arduino/: ball_follower_arduino.ino
ball_follower_robot/: package.xml  setup.cfg  setup.py
ball_follower_robot/ball_follower_robot/: __init__.py  motor_controller.py  object_tracker.py  path_tracker.py  serial_bridge.py  ultrasonic_mapper.py
ball_follower_robot/launch/: launch_gazebo.py  launch_laptop.py  launch_pi.py  launch_robot.py
ball_follower_robot/rviz/: robot_view.rviz
ball_follower_robot/urdf/: robot.urdf
